force-app/main/default/objects/Transacao__c/Transacao__c.object-meta.xml
<CustomObject>
    <label>Transação</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transações</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>