force-app/main/default/objects/Transacao__c/fields/Adiantamento__c.field-meta.xml
<CustomField>
    <fullName>Adiantamento__c</fullName>
    <label>Adiantamento</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tipo__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Não</fullName>
            </value>
            <value>
                <fullName>Sim</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>