force-app/main/default/objects/Transacao__c/fields/Categoria__c.field-meta.xml
<CustomField>
    <fullName>Categoria__c</fullName>
    <label>Categoria</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tipo__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Passagem</fullName>
            </value>
            <value>
                <fullName>KM rodado</fullName>
            </value>
            <value>
                <fullName>Combustível</fullName>
            </value>
            <value>
                <fullName>Pedágio</fullName>
            </value>
            <value>
                <fullName>Estacionamento</fullName>
            </value>
            <value>
                <fullName>Taxi/Uber</fullName>
            </value>
            <value>
                <fullName>Locação</fullName>
            </value>
            <value>
                <fullName>Manutenção</fullName>
            </value>
            <value>
                <fullName>Hospedagem</fullName>
            </value>
            <value>
                <fullName>Alimentação</fullName>
            </value>
            <value>
                <fullName>Inscrição</fullName>
            </value>
            <value>
                <fullName>Outro</fullName>
            </value>
            <value>
                <fullName>Estorno</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>