force-app/main/default/objects/Transacao__c/fields/Km_final__c.field-meta.xml
<CustomField>
    <fullName>Km_final__c</fullName>
    <label>Km final</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>