force-app/main/default/objects/Transacao__c/fields/Km_inicial__c.field-meta.xml
<CustomField>
    <fullName>Km_inicial__c</fullName>
    <label>Km inicial</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>