force-app/main/default/objects/Transacao__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quitação</fullName>
            </value>
            <value>
                <fullName>Requisição</fullName>
            </value>
            <value>
                <fullName>Estorno</fullName>
                <isActive>false</isActive>
                <label>Estorno</label>
            </value>
            <value>
                <fullName>Reembolso</fullName>
                <isActive>false</isActive>
                <label>Reembolso</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>