force-app/main/default/objects/Transacao__c/fields/Valor_valido__c.field-meta.xml
<CustomField>
    <fullName>Valor_valido__c</fullName>
    <label>Valor válido</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>