force-app/main/default/objects/Transacao__c/validationRules/km_final_incorreto.validationRule-meta.xml
<ValidationRule>
    <fullName>km_final_incorreto</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
	!$User.Ignorar_erros__c,
	Km_final__c &lt;= Km_inicial__c
)</errorConditionFormula>
    <errorDisplayField>Km_final__c</errorDisplayField>
    <errorMessage>A diferença entre o Km inicial e final dever ser maior que zero.</errorMessage>
</ValidationRule>