force-app/main/default/objects/Transacao__c/validationRules/km_final_nao_preencher.validationRule-meta.xml
<ValidationRule>
    <fullName>km_final_nao_preencher</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
	!$User.Ignorar_erros__c,
	NOT(ISBLANK(Km_final__c)),
	OR(
		TEXT(Tipo__c) != &apos;Quitação&apos;,
		AND(
			TEXT(Tipo__c) == &apos;Quitação&apos;,
			TEXT(Categoria__c) != &apos;KM rodado&apos;
		)
	)
)</errorConditionFormula>
    <errorDisplayField>Km_final__c</errorDisplayField>
    <errorMessage>O Km final deve ser preenchido apenas em quitação de Km rodado.</errorMessage>
</ValidationRule>