force-app/main/default/objects/Transacao__c/validationRules/km_final_preencher.validationRule-meta.xml
<ValidationRule>
    <fullName>km_final_preencher</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
	!$User.Ignorar_erros__c,
	ISBLANK(Km_final__c),
	TEXT(Tipo__c) == &apos;Quitação&apos;,
	TEXT(Categoria__c) == &apos;KM rodado&apos;
)</errorConditionFormula>
    <errorDisplayField>Km_final__c</errorDisplayField>
    <errorMessage>O Km final deve ser preenchido em quitação de Km rodado.</errorMessage>
</ValidationRule>