force-app/main/default/objects/Transacao__c/validationRules/total_km_nao_preencher.validationRule-meta.xml
<ValidationRule>
    <fullName>total_km_nao_preencher</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
	!$User.Ignorar_erros__c,
	NOT(ISBLANK(Total_de_Km__c)),
	TEXT(Categoria__c) != &apos;KM rodado&apos;
)</errorConditionFormula>
    <errorDisplayField>Total_de_Km__c</errorDisplayField>
    <errorMessage>O Total de Km deve ser preenchido apenas em requisição de Km rodado.</errorMessage>
</ValidationRule>