force-app/main/default/objects/Transacao__c/validationRules/valor_incorreto.validationRule-meta.xml
<ValidationRule>
    <fullName>valor_incorreto</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
	!$User.Ignorar_erros__c,
	OR(
		AND(
			TEXT(Tipo__c) == &apos;Requisição&apos;,
			Valor__c &gt;= 0
		),
		AND(
			TEXT(Tipo__c) == &apos;Quitação&apos;,
			Valor__c &lt;= 0
		)
	)
)</errorConditionFormula>
    <errorDisplayField>Valor__c</errorDisplayField>
    <errorMessage>O Valor para requisição deve ser negativo, e o da quitação positivo.</errorMessage>
</ValidationRule>