force-app/main/default/objects/Transacao__c/validationRules/valor_preencher.validationRule-meta.xml
<ValidationRule>
    <fullName>valor_preencher</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
	!$User.Ignorar_erros__c,
	ISBLANK(Valor__c),
	TEXT(Categoria__c) != &apos;KM rodado&apos;
)</errorConditionFormula>
    <errorDisplayField>Valor__c</errorDisplayField>
    <errorMessage>O Valor deve ser preenchido em transação diferente de Km rodado.</errorMessage>
</ValidationRule>