force-app/main/default/objects/Transacao__c/validationRules/valor_valido_incorreto.validationRule-meta.xml
<ValidationRule>
    <fullName>valor_valido_incorreto</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
	!$User.Ignorar_erros__c,
	OR(
		Valor_valido__c &gt; Valor__c
		
	)
)</errorConditionFormula>
    <errorDisplayField>Valor_valido__c</errorDisplayField>
    <errorMessage>O valor valido não deve sair dos limites do valor da transação.</errorMessage>
</ValidationRule>