force-app/main/default/objects/Transacao__c/validationRules/valor_valido_nao_preencher.validationRule-meta.xml
<ValidationRule>
    <fullName>valor_valido_nao_preencher</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
	!$User.Ignorar_erros__c,
	NOT(ISBLANK(Valor_valido__c)),
	TEXT(Tipo__c) == &apos;Requisição&apos;
)</errorConditionFormula>
    <errorDisplayField>Valor_valido__c</errorDisplayField>
    <errorMessage>O valor válido não deve ser preenchido em transação de requisição, apenas de quitação.</errorMessage>
</ValidationRule>